[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/Horse/Llama.png" type="Texture" id=1]
[ext_resource path="res://Objects/Horse/Horse.gd" type="Script" id=2]
[ext_resource path="res://Player/Jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Objects/Ball/BallWall.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=8]
resource_name = "Air"
tracks/0/type = "bezier"
tracks/0/path = NodePath("../RiderPos:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../RiderPos:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, -14, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../RiderPos:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../RiderPos:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "Walk"
length = 0.25
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.13, 0.25 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../RiderPos:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, -12, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.13, 0.25 )
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="Horse" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Child" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
autoplay = "Idle"
anims/Air = SubResource( 8 )
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="RiderPos" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
frames = SubResource( 1 )
offset = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Saddle" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Saddle"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="Pause" type="Timer" parent="."]
wait_time = 0.25

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0
bus = "Sound"

[node name="BallWall" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -8 )

[node name="Jump" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Saddle" to="." method="_on_Saddle_body_entered"]
[connection signal="timeout" from="Pause" to="." method="_on_Pause_timeout"]
[connection signal="timeout" from="Jump" to="." method="_on_Jump_timeout"]
